# wellspent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml
.github/workflows/: test.yml
frontend/: index.html  landing.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  preferences.ts  types.ts
frontend/src/api/: auth.ts  client.ts  folders.ts  trips.ts  waitlist.ts
frontend/src/components/: AppShell.tsx  PreferencesForm.tsx  TripCompletionModal.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: DashboardPage.tsx  ExplorePage.tsx  HomePage.tsx  LandingPage.tsx  LoginPage.tsx  OnboardingPage.tsx  PlanPage.tsx  RecommendPage.tsx  RegisterPage.tsx  SettingsPage.tsx  TripDetailPage.tsx  landing.css
notebooks/: inspect_db.ipynb  test_api.ipynb
src/app/: main.py
src/app/adapters/: llm_client.py  sqlalchemy_folder_repo.py  sqlalchemy_premade_template_repo.py  sqlalchemy_trip_repo.py  sqlalchemy_user_repo.py  sqlalchemy_waitlist_repo.py  swiss_tourism_client.py
src/app/api/: folders.py  public_settings.py  swiss_tourism.py  trips.py  users.py  waitlist.py
src/app/core/: config.py  db.py  security.py
src/app/models/: user.py
src/app/ports/: llm.py  repositories.py  swiss_tourism.py
src/app/schemas/: schemas.py
src/app/services/: ai_recommendation_service.py  community_recommendation_service.py  folder_service.py  premade_recommendation_service.py  recommendation_service.py  trip_service.py  (+2 more)
tests/: conftest.py  test_db.py  test_folder_service.py  test_folders_api.py  test_public_api.py  test_recommendation_service.py  test_swiss_tourism_client.py  test_trip_service.py  test_trips_api.py  test_user_service.py
