[project]
name = "wellspent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
